# Analise_banco

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
