[tool.poetry]
name = "analise-banco"
version = "0.1.0"
description = "Dashboard de análise de dados bancários com Streamlit"
authors = ["Lucas"]
readme = "README.md"
packages = [{include = "analise_banco"}]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "*"
altair = "^5.0.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
plotly = "^5.17.0"
statsmodels = "^0.14.0"
python-dateutil = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "streamlit run app.py"
