[tool.poetry]
name = "analise-banco"
version = "0.1.0"
description = "Dashboard de análise de dados bancários com Streamlit"
authors = ["Lucas"]
readme = "README.md"
packages = [{include = "analise_banco"}]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "1.28.0"
pandas = "2.3.0"
numpy = "1.26.4"
plotly = "5.24.1"
python-dateutil = "2.9.0.post0"
altair = "5.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "streamlit run app.py"
